--- a/experiment/simulation/fullwaverectifier_ver3.html
+++ b/experiment/simulation/fullwaverectifier_ver3.html
@@ -196,13 +196,19 @@
                             <img src="./image/Calculator.png" alt="Save icon" style="width:20px;height:20px;top:11px;"/></button> 
                         <span class="tooltiptext">Calculator</span></div></div>
                 <div style=" position:absolute;  top:50px;  left:0px; height:190px; width:520px;">
-                   <br>
+                   
+                    <br>
+                    &nbsp; &nbsp;  \(V_{rms}= \frac{V_m}{\sqrt{2}}\), \(V_m\) is the peak voltage<br><br>
+                    &nbsp; &nbsp; \(V_{dc}= \frac{2 \times V_m} {&#960;}\)<br><br>
+                    &nbsp; &nbsp; Ripple Factor=\(\frac{V_{ac}}{V_{dc}}\) \(\quad\)Since,  \(V_{ac}=\sqrt{(V^2_{rms}-V^2_{dc})}\)<br><br>
+                    &nbsp; &nbsp; Peak Current:<input type="text" id="pkcrt" placeholder="Peak Current" readonly >  <label id="currmamp">mA</label><br>
+                    <!--br>
                       $$V_{rms}= \frac{V_m}{\sqrt{2}}$$ 
                       V<sub>m</sub> is the peak voltage
                      $$V_{dc}= \frac{2 \times V_m} {&#960;}$$
                      Ripple Factor $$\frac{V_{ac}}{V_{dc}}$$ 
                      Since,  $$V_{ac}=\sqrt{(V^2_{rms}-V^2_{dc})}$$
-                    Peak Current:<input type="text" id="pkcrt" placeholder="Peak Current" readonly >  <label id="currmamp">mA</label><br>
+                    Peak Current:<input type="text" id="pkcrt" placeholder="Peak Current" readonly >  <label id="currmamp">mA</label><br-->
                 </div>
             </div>    <!--------------- end of .calcln----------------------->
         </div><!--------------- end of .wholebody----------------------->
