--- a/experiment/simulation/fullwaverectifier_ver3.html
+++ b/experiment/simulation/fullwaverectifier_ver3.html
@@ -37,7 +37,7 @@
         <header class="default" id="experiment-header">
             <div class="logo" id="experiment-header-logo" style="text-align:center">
 
-                <img src="./imageslogo.jpg" style="height:150px;width:1260px;"></div>
+                <img src="./images/logo.jpg" style="height:150px;width:1260px;"></div>
         </header>
         
       
