--- a/experiment/simulation/fullwaverectifier_ver2.html
+++ b/experiment/simulation/fullwaverectifier_ver2.html
@@ -157,6 +157,11 @@
                         </div><!--------------- end of .knob-container----------------------->
 
                     </div> <!--------------- end of .middlerightupper--------------------->
+                    <p style="position:absolute;top:470px;right:60px;">
+                        Virtual Oscilloscope Tutorial : 
+                        <a href="../images/Oscilloscope_Tutorial_fullwave.pdf" target="_blank"> Virtual Oscilloscope Tutorial</a>
+                        </p>	
+
                 </div>  <!--------------- end of .controllSection----------------------->
             <div id="calcln" >
                 <div style="position:absolute; background-color:#3385ff;   height:50px; top:0px; right:0px; width:600px;font-size: 16px;font-weight: bold;">
