--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -3,16 +3,50 @@
 <head>
 	<!-- Add CSS at the head of HTML file -->
     <link rel="stylesheet" href="./css/fullwvcss.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+	
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="./js/main.js"></script>
+
 </head>
 <body>
 		<!-- Your code goes here-->
-		<div  style="position:relative;top:-22px;width:600px;height:410px; margin:0 auto;">
+		<!--div  style="position:relative;top:-22px;width:600px;height:410px; margin:0 auto;">
 			
 			<h2><marquee style="color:green;font-size:25pt">Full Wave Rectifier</marquee></h2>
 
                             <input type="button" onclick="window.open('./fullwaverectifier_ver2.html', '_blank');"  value="Full Wave Rectifier" style="position:absolute;top:100px;right:200px;"/>
 <input type="button" onclick="window.open('./fullwaverectifier_ver3.html', '_blank');"  value="Full Wave Rectifier (draw circuit)" style="position:absolute;top:160px;right:150px;width:320px;"/>
-</div>
+</div-->
+<div class="container p-3 my-5 border-0">
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+          <marquee class="h3 text-success" > Full Wave Rectifier</marquee>
+          <ul class="nav nav-pills nav-justified " role="tablist"> 
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <li class="nav-item nav-link p-2 rounded border border-2"  data-bs-toggle="tab" onclick="window.open('./fullwaverectifier_ver2.html','_blank');" style="cursor: pointer;">  <span class="h5"> Full Wave Rectifier</span>
+                </li><br>
+                <li class="nav-item nav-link p-2 rounded border border-2"  data-bs-toggle="tab" onclick="window.open('./fullwaverectifier_ver3.html','_blank');" style="cursor: pointer;" >
+                    <span class="h5"> Full Wave Rectifier (draw circuit) </span>
+                </li><br> 
+               
+                            </div>
+            <div class="col-sm-3"></div>
+          </ul>
+
+
+        </div>
+        <div class="col-md-1"></div>  
+      </div>
+    </div>
+
+
 	   <!-- Add JS at the bottom of HTML file --> 
        
 </body>
